Bug 315787 - It's not possible to drag contacts when grouped by accounts
Summary: It's not possible to drag contacts when grouped by accounts
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-26 01:22 UTC by Aleix Pol
Modified: 2013-03-13 10:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2013-02-26 01:22:56 UTC
Before, we could drag contacts to other groups or the desktop. We can't anymore.

I'd say it's a 0.6 regression, if I understand it correctly.

Reproducible: Always
Comment 1 Aleix Pol 2013-02-26 01:23:33 UTC
Also this breaks the contact applet creation, btw. It gets better with: https://bugs.kde.org/show_bug.cgi?id=315786
Comment 2 Martin Klapetek 2013-02-26 07:37:34 UTC
We were actually thinking about just dropping the contact plasmoid altogether and replace it with the pinned contacts in chat plasmoid as it's quite overlapping. However no decision has been made yet.

How does that sound?
Comment 3 David Edmundson 2013-02-26 10:22:37 UTC
Drag and drop onto the desktop works for me here.

Drag and drop between groups appears to work but nothing is happening when it drops.
Comment 4 Aleix Pol 2013-02-26 12:47:32 UTC
@martin it sounds too soon to me, but it's a possibility indeed

@david If i try to drag, I keep selecting the other contacts, but I can't drag.
Comment 5 Martin Klapetek 2013-02-26 12:54:59 UTC
Are you sure you're running clean master? It works here too. And contact list shouldn't have multi-selection enabled (unless someone changed it).
Comment 6 Aleix Pol 2013-02-26 13:18:29 UTC
http://www.proli.net/wp-content/uploads/2013/02/ktp-cannotdrag.ogv

Small videos for those who don't trust...
And yes, that's master.
Comment 7 David Edmundson 2013-03-11 01:48:38 UTC
Works when grouped by group, not when by account.

This may have been deliberate because you can't drag between groups, but it's a bit weird to have the behaviour change (which is why Apol has reported it).

Moving down from major, leaving decision up to mck182.
Comment 8 Martin Klapetek 2013-03-11 11:34:08 UTC
Needs to be fixed. Other accounts in the list should not provide a drop area, so it will be possible to drop only to the desktop.
Comment 9 Roman 2013-03-13 10:34:09 UTC
Git commit c65e44bfa690dd659e4a4e109551fc89176b2357 by Roman Nazarenko.
Committed on 13/03/2013 at 11:32.
Pushed by romann into branch 'master'.

Enable drag-and-drop regardless of grouping settings.

REVIEW: 109454

M  +10   -6    contact-list-widget.cpp

http://commits.kde.org/telepathy-contact-list/c65e44bfa690dd659e4a4e109551fc89176b2357