Enable drag-and-drop regardless of grouping settings.

REVIEW: 109454
BUG: 315787